--- a/会议记录&邮件往来.md
+++ b/会议记录&邮件往来.md
@@ -72,7 +72,7 @@ Aber genauso gut können Sie die drei Forschungsfragen auch getrennt lassen. 
 
   
 
-Die theoretischen Grundlagen spielen beim FS eher eine untergeordnete Rolle. Vielmehr geht es um die Erkenntnisgewinnung aus den gestellten Forschungsfragen. Sie möchten mit der Literaturanalyse ja einen aktuellen Stand der Forschung zu dem Thema erarbeiten. Die theoretischen Grundlagen sind eher für den Leser da, in das Thema einen Einstieg zu erhalten.
+Die theoretischen Grundlagen spielen beim FS eher eine untergeordnete Rolle. Vielmehr geht es um die ***Erkenntnisgewinnung*** aus den gestellten Forschungsfragen. Sie möchten mit der Literaturanalyse ja einen aktuellen Stand der Forschung zu dem Thema erarbeiten. Die theoretischen Grundlagen sind eher für den Leser da, in das Thema einen Einstieg zu erhalten.
 
   
 
