--- a/会议记录&邮件往来.md
+++ b/会议记录&邮件往来.md
@@ -77,3 +77,11 @@ Die theoretischen Grundlagen spielen beim FS eher eine untergeordnete Rolle. Vie
   
 
 Ich denke, mit den 3 bzw. 2 Forschungsfragen können Sie jetzt erst einmal gut weiter machen!
+
+
+# Diplomarbeit
+Sie können in dem theoretischen Hintergrund schon beide (Finanzwirtschaft / KI) einbeziehen. Allerdings wie gesagt, keine 20 Seiten theoretischen Hintergrund im Forschungsseminar. **Ein ausführlicher theoretischer Hintergrund gehört dann eher in die Diplomarbeit, die Sie ja momentan noch nicht bearbeiten**.
+
+  
+
+Der theoretische Hintergrund im Forschungsseminar sollte sich darauf *beschränken*, dass *Leser* die **Thematik** (① 题目范围,题材范围  ② 主题表现手法,主题处理) verstehen können. Das beinhaltet die Beschreibung der Grundbegriffe und Prinzipien und dessen Zusammenhänge untereinander. **Beide Theorien** können und sollen aber natürlich betrachtet werden, weil die beiden Themen ja auch in der Literaturanalyse betrachtet werden.
