fertig, update ppt

--- a/会议记录&邮件往来.md
+++ b/会议记录&邮件往来.md
@@ -85,3 +85,15 @@ Sie können in dem theoretischen Hintergrund schon beide (Finanzwirtschaft / KI)
   
 
 Der theoretische Hintergrund im Forschungsseminar sollte sich darauf *beschränken*, dass *Leser* die **Thematik** (① 题目范围,题材范围  ② 主题表现手法,主题处理) verstehen können. Das beinhaltet die Beschreibung der Grundbegriffe und Prinzipien und dessen Zusammenhänge untereinander. **Beide Theorien** können und sollen aber natürlich betrachtet werden, weil die beiden Themen ja auch in der Literaturanalyse betrachtet werden.
+
+
+
+# FS Vortrag
+
+Bei dem FS-Vortrag sollten Sie vor allem den Fokus auf die **Ergebnisse** setzen. Aber natürlich sollte auch die **Methodik** und **Vorgehensweise** der *Literaturanalyse* vorgestellt werden. Der theoretische Hintergrund ist eher nicht so wichtig. Da reicht es das Thema am Anfang zu *motivieren* und den Zuhörern einen interessanten Einstieg in die Thematik zu liefern. Ich würde sagen 1/3 Methodik, 2/3 Ergebnisse/Diskussion. 
+
+
+Der Vortrag sollte etwa 20 Minuten dauern. Im Anschluss gibt es meist eine 5-10 minütige Diskussion. 
+
+Fragen kommen i.d.R. erst nach ihrem Vortrag. Während des Vortrags sind Fragen sehr unüblich, aber nicht ausgeschlossen (es gab in der Vergangenheit schon vereinzelnd Rückfragen von Professoren).
+
